Fix navigation mobile design errors

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header {
     display: none;
 }
 
-@media (max-width: 650px) {    
+@media (max-width: 800px) {    
     .showDesktop {
         display: none;
     }
